--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
-@import './utils';
-@import './variables';
-@import './menu';
-@import './orders'
+@import "./utils";
+@import "./variables";
+@import "./menu";
+@import "./orders";
+@import "./packing";
