--- a/sass/_packing.scss
+++ b/sass/_packing.scss
@@ -222,7 +222,7 @@
   transform: translate(-50%, -50%);
 }
 
-.test {
+.modal__input__thumb {
   position: relative;
 }
 
@@ -298,4 +298,72 @@
   padding: 0 20px 18px 20px;
   background-color: var(--white);
   box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+}
+
+.devided-packing__list {
+  width: 100%;
+  padding: 8px 5px 18px 35px;
+  grid-column: span 7;
+}
+
+.devided__list__title {
+  color: #a1a5ba;
+
+  font-family: Futura;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -0.32px;
+}
+
+.devided__item__img {
+  margin-right: 14px;
+  width: 50px;
+  height: 50px;
+}
+
+.devided__chosen__quantity {
+  border-radius: 8px;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  width: 107px;
+  height: 36px;
+  padding: 8px 16px;
+  color: #4c5272;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+  position: relative;
+}
+
+.devided__chosen__quantity:focus {
+  border: 1px solid var(--active);
+  outline: none;
+}
+
+.icon-complete {
+  fill: #0e8345;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 50%;
+  left: 80px;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+.chosen__quantity__input {
+  position: relative;
+}
+
+.devided-packing__thumb {
+  width: 100%;
+  border-radius: 10px;
+  background: #f4f5fb;
+  padding: 5px 11px 5px 19px;
+}
+
+.devided-packing__table {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr 4fr 1fr 1fr;
 }
